--- a/css/desktop.css
+++ b/css/desktop.css
@@ -9,7 +9,7 @@
 
 @media screen and (min-width: 1280px) {
     .container{
-        width: 1158px;
+        max-width: 1158px;
         margin: 0 auto;
         padding: 0 15px;
     }
