--- a/css/desktop.css
+++ b/css/desktop.css
@@ -112,7 +112,18 @@
 
     .hero{
         padding: 180px 0;
+        background-image: linear-gradient(rgba(46, 47, 66, 0.7), rgba(46, 47, 66, 0.7)),url(../images/people-office.jpg);
+
     }
+
+    @media (min-device-pixel-ratio: 2),
+  (-webkit-min-device-pixel-ratio: 2),
+  (min-resolution: 192dpi),
+  (min-resolution: 2dppx) {
+    .hero{
+        background-image: linear-gradient(rgba(46, 47, 66, 0.7), rgba(46, 47, 66, 0.7)),url(../images/hero-desktop-2x.jpg);
+    }
+}
     
     .hero-heading{
         font-size: 56px;
