--- a/css/tablet.css
+++ b/css/tablet.css
@@ -14,12 +14,23 @@
         margin: 0;
     }
 
+    .menu-container{
+        display: none;
+    }
+
+    .container{
+        width: 100%;
+        max-width: 767px;
+        padding: 0 16px;
+        margin: 0 auto;
+    }
+
     .header{
         display: block;
         width: 100%;
         border-bottom: 1px solid #E7E9FC;
         box-shadow: 0px 2px 1px rgba(46, 47, 66, 0.08), 0px 1px 1px rgba(46, 47, 66, 0.16), 0px 1px 6px rgba(46, 47, 66, 0.08);
-        padding: 0 16px;
+        padding: 0;
     }
 
 
@@ -89,9 +100,11 @@
     
     
     .header-contacts-list-item a{
-        font-size: 16px;
-        line-height: 1.5;
-        letter-spacing: 0.02em;
+        font-weight: 400;
+        font-size: 12px;
+        line-height: 1.17;
+
+        letter-spacing: 0.04em;
         color: var(--slate);
     
         transition-property: color;
@@ -118,9 +131,18 @@
    
 
     .hero{
-        padding: 112px 136px;
-
+        padding: 112px 0;
+        background-image: linear-gradient(rgba(46, 47, 66, 0.7), rgba(46, 47, 66, 0.7)),url(../images/hero-tablet.jpg);
     }
+
+    @media (min-device-pixel-ratio: 2),
+  (-webkit-min-device-pixel-ratio: 2),
+  (min-resolution: 192dpi),
+  (min-resolution: 2dppx) {
+    .hero{
+        background-image: linear-gradient(rgba(46, 47, 66, 0.7), rgba(46, 47, 66, 0.7)),url(../images/hero-tablet-2x.jpg);
+    }
+}
 
     .hero-heading{
         font-size: 56px;
@@ -131,21 +153,19 @@
     }
 
     .features{
-        padding: 96px 16px;
+        padding: 96px 0;
 
     }
 
     .features-list{
-        
         flex-direction: row;
-        justify-content: space-around;
         flex-wrap: wrap;
-    
-        gap:24px;
+        row-gap:72px;
+        column-gap: 24px;
     } 
     
     .features-list-item{
-        width: 356px;
+        width: calc((100% - 24px)/2);
     }
     
     .features-list-item-heading{
@@ -154,29 +174,70 @@
     }
 
     .team{
-        padding: 96px 108px;
+        padding: 96px 0;
+    }
+
+    .team-container{
+        max-width: 582px;
+        width: 100%;
+        padding: 0 15px;
     }
 
     .team-list{
         flex-direction: row;
-        align-items: center;
         flex-wrap: wrap;
+        column-gap: 24px;
     }
 
     .team-list-item{
-        width:264px;
+        width: calc((100% - 24px)/2)
     }
 
-    .team-list-item:nth-child(1), .team-list-item:nth-child(2){
+    .team-list-item:nth-child(1), .team-list-item:nth-child(4){
         margin-bottom: 64px;
     }
 
+    .customers-container{
+        max-width: 582px;
+        width: 100%;
+        padding: 0 15px;
+    }
+
+    .customers{
+        padding: 96px 0;
+    }
+
+    .customers-list{
+        row-gap: 72px;
+        column-gap: 24px;
+        width: 100%;
+    }
+
+    .customers-list-item {
+        width: 168px;
+    }
+
+    .customers-list-item a{
+        width: 168px;
+    }
+
+
+  
+
     .footer-container{
+        max-width: 582px;
+        width: 100%;
+        padding: 0 15px;
+
         flex-direction: row;
         align-items: start;
         flex-wrap: wrap;
-        gap: 0 24px;
-        padding: 0 164px 0 108px;
+        column-gap: 24px;
+        row-gap: 72px;
+    }
+
+    .footer-social{
+        margin-bottom: 0;
     }
 
     .footer-content{
