--- a/css/desktop.css
+++ b/css/desktop.css
@@ -28,6 +28,8 @@
         width: 100%;
         border-bottom: 1px solid #E7E9FC;
         box-shadow: 0px 2px 1px rgba(46, 47, 66, 0.08), 0px 1px 1px rgba(46, 47, 66, 0.16), 0px 1px 6px rgba(46, 47, 66, 0.08);
+        padding-left: 0;
+        padding-right: 0;
     }
     
     .header-container{
@@ -61,13 +63,13 @@
     }
     
     .header-list-item a{
-    
+        padding: 29px 0px;
+
         font-weight: 500;
         font-size: 16px;
         line-height: 1.5;
         letter-spacing: 0.02em;
         color: var(--navy-blue);
-        padding: 24px 0px;
     
         transition-property:color ;
         transition-duration: 250ms;
@@ -94,6 +96,8 @@
     }
     
     .header-contacts-list-item a{
+        
+
         font-size: 16px;
         line-height: 1.5;
         letter-spacing: 0.02em;
@@ -109,6 +113,21 @@
         display: block;
     }
 
+    .page-active{
+        position: relative;
+    }
+
+    .page-active::after{
+        content: "";
+        display: block;
+        width: 100%;
+        height: 4px;
+        position: absolute;
+        bottom:-1px;
+        background: var(--ocean);
+        border-radius: 2px;
+    }
+
 
     .hero{
         padding: 180px 0;
@@ -116,14 +135,7 @@
 
     }
 
-    @media (min-device-pixel-ratio: 2),
-  (-webkit-min-device-pixel-ratio: 2),
-  (min-resolution: 192dpi),
-  (min-resolution: 2dppx) {
-    .hero{
-        background-image: linear-gradient(rgba(46, 47, 66, 0.7), rgba(46, 47, 66, 0.7)),url(../images/hero-desktop-2x.jpg);
-    }
-}
+    
     
     .hero-heading{
         font-size: 56px;
@@ -234,6 +246,7 @@
 
     .footer-container{
         flex-direction: row;
+        align-items: baseline;
     }
 
     .footer-social{
