--- a/css/mobile.css
+++ b/css/mobile.css
@@ -1,3 +1,15 @@
-@media screen and  (max-width:480px) {
- 
+@media screen and  (max-width:428px) {
+    .hero{
+        background-image: linear-gradient(rgba(46, 47, 66, 0.7), rgba(46, 47, 66, 0.7)),url(../images/hero-mobile.jpg);
+    }
+
+    @media (min-device-pixel-ratio: 2),
+    (-webkit-min-device-pixel-ratio: 2),
+    (min-resolution: 192dpi),
+    (min-resolution: 2dppx) {
+    .hero{
+        background-image: linear-gradient(rgba(46, 47, 66, 0.7), rgba(46, 47, 66, 0.7)),url(../images/hero-mobile-2x.jpg);
+    }
 }
+}
+
