--- a/css/tablet.css
+++ b/css/tablet.css
@@ -88,6 +88,17 @@
     .header-list-item a:is(:hover, :focus){
         color: var(--ocean)
     }
+
+    .page-active::after{
+        content: "";
+        display: block;
+        width: 100%;
+        height: 4px;
+        position: absolute;
+        bottom:-1px;
+        background: var(--ocean);
+        border-radius: 2px;
+    }
     
     .header-contacts-list{
         list-style: none;
@@ -132,7 +143,8 @@
 
     .hero{
         padding: 112px 0;
-        background-image: linear-gradient(rgba(46, 47, 66, 0.7), rgba(46, 47, 66, 0.7)),url(../images/hero-tablet.jpg);
+        background-image: linear-gradient(rgba(46, 47, 66, 0.7), rgba(46, 47, 66, 0.7)),url(../images/hero-desktop.jpg);
+
     }
 
     @media (min-device-pixel-ratio: 2),
@@ -140,16 +152,18 @@
   (min-resolution: 192dpi),
   (min-resolution: 2dppx) {
     .hero{
-        background-image: linear-gradient(rgba(46, 47, 66, 0.7), rgba(46, 47, 66, 0.7)),url(../images/hero-tablet-2x.jpg);
+        background-image: linear-gradient(rgba(46, 47, 66, 0.7), rgba(46, 47, 66, 0.7)),url(../images/hero-desktop-2x.jpg);
     }
 }
+
+ 
 
     .hero-heading{
         font-size: 56px;
         line-height: 1.07;
     
         max-width: 496px;
-        margin-bottom: 48px;
+        margin-bottom: 36px;
     }
 
     .features{
@@ -193,8 +207,12 @@
         width: calc((100% - 24px)/2)
     }
 
-    .team-list-item:nth-child(1), .team-list-item:nth-child(4){
+    .team-list-item:nth-child(1), .team-list-item:nth-child(2){
         margin-bottom: 64px;
+    }
+
+    .team-list-item:nth-child(3), .team-list-item:nth-child(4){
+        margin-bottom: 0;
     }
 
     .customers-container{
@@ -242,6 +260,7 @@
 
     .footer-content{
         text-align:left;
+        margin-bottom: 0;
     }
 
     .footer-logo{
